# allocation-counter

./: Cargo.toml  Makefile  README.md  o
.github/workflows/: ci.yml
src/: allocator.rs  lib.rs
