[package]
name = "allocation-counter"
version = "0.1.0"
authors = ["Fredrik Fornwall <fredrik@fornwall.net>"]
description = "Run some code while counting the memory allocation it doese."
edition = "2018"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["allocator", "memory"]
categories = ["development-tools", "memory-management"]
repository = "https://github.com/fornwall/allocation-counter"

[dependencies]
backtrace = { version = "0.3" } #, optional = true }
