[package]
name = "allocation-counter"
version = "0.7.1"
authors = ["Fredrik Fornwall <fredrik@fornwall.net>"]
categories = ["development-tools", "memory-management"]
description = "Count the number of memory allocation of some code."
edition = "2021"
homepage = "https://github.com/fornwall/allocation-counter"
keywords = ["allocator", "memory"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/fornwall/allocation-counter"
